# MCMC-Beam-forming

./: .gitignore  .pylintrc  LICENSE  README.md  mcmcbf.h5  pyproject.toml
bbf/: main.py  setting.py
bbf/beamforming/: bf.py  optimization.py  single.py  theoritical.py  utils.py
bbf/bootstrap/: get_grids.py  perform_bootstrap.py
bbf/utils/: locker_write.py
data/: filtered_iteration1.csv
mcmc_beam_forming/: beamforming.py  collect_bf_result.py  mcmc.py
mcmc_beam_forming/core/: bf.py
mcmc_beam_forming/utils/: IASP91.csv  get_grids.py  io.py  optim.py  random_sampling.py  setting.py  theoritical.py
notebook/: filter_tongml_model_to_iteartion2.ipynb  prepare_ai4eps_from_tongaml_project.ipynb
