[tool.poetry]
name = "bbf"
version = "0.1.0"
description = "A tool to discard falsely detected PS arrivals using bootstrapping and Beam forming methods"
authors = ["Ziyi Xi <ziyixi@mail.ustc.edu.cn>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mpi4py = "^3.1.5"
pandas = "^2.2.0"
numpy = "^1.26.3"
numba = "^0.58.1"
pymap3d = "^3.0.1"
loguru = "^0.7.2"
click = "^8.1.7"
obspy = "^1.4.0"
h5py = "^3.10.0"
fasteners = "^0.19"

[tool.poetry.scripts]
bootstrapping-beam-forming = "bbf.main:main"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"