[tool.poetry]
name = "mcmc_beam_forming"
version = "0.1.0"
description = "A tool to discard falsely detected PS arrivals using MCMC and Beam forming methods"
authors = ["Ziyi Xi <ziyixi@mail.ustc.edu.cn>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.9"
pandas = "^2.2.0"
numpy = "^1.26.3"
pymap3d = "^3.0.1"
loguru = "^0.7.2"
click = "^8.1.7"
obspy = "^1.4.0"
h5py = "^3.10.0"
mpi4py = "^3.1.5"
pyarrow = "^15.0.0"
numba = "^0.59.0"
pymc = "^5.10.3"
numpyro = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"
ipywidgets = "^8.1.1"
seaborn = "^0.13.2"
graphviz = "^0.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"